content & file structure

--- a/about.html
+++ b/about.html
@@ -10,12 +10,12 @@
     <meta property="og:title" content="Six Figure Labs: Web Development & Web Design" />
     <meta property="og:description" content="Gain more business traction with a little help from Six Figure Labs"/>
     <meta property="og:image" content="openGraphBg.png" />
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="services.css">
-    <link rel="stylesheet" href="about.css">
-    <link rel="shortcut icon" type="image/png" href="SixFavicon.png" />
-    <script src="nav.js" defer></script>
-    <script src="call-form.js" defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/services.css">
+    <link rel="stylesheet" href="/css/about.css">
+    <link rel="shortcut icon" type="image/png" href="/images/SixFavicon.png" />
+    <script src="/js/nav.js" defer></script>
+    <script src="/js/call-form.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
   rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -28,14 +28,14 @@
         <div class="group">
         <div class="nav container">
             <div class="nav__left">
-                <a href = "index.html" class="nav__logo">
-                    <img id = "logo" src="6FLMainLogo.svg" alt="">
+                <a href = "/index.html" class="nav__logo">
+                    <img id = "logo" src="images/6FLMainLogo.svg" alt="">
                 </a>
                 <ul class="nav__items">
                     <li><a id="home" href="./index.html">Home</a></li>
                     <li><a id="services" href="./services.html">Services</a></li>
                     <li><a id="about" href="./about.html">About</a></li>
-                    <li><a id="our-work" href="./our-work.html">Our Work</a></li>
+                    <li><a id="our-work" href="./comingsoon.html">Our Work</a></li>
                 </ul>
             </div>
             <div class="nav__right">
@@ -43,7 +43,7 @@
                     <div class="btn__text">
                         <h5 href="./contact.html">Contact</h5>
                     </div>
-                    <img class="btn__icon" src="chevronDouble.svg" alt="">
+                    <img class="btn__icon" src="/images/chevronDouble.svg" alt="">
                 </a>
 
                 <button class="hamburger">
@@ -68,7 +68,7 @@
     <section class="services__second" data-aos="fade-right">
         <h1 class="huge text-shadow">The <span class ="gradient">Six Figure</span> Team</h1>
         <div class="services__second__wrapper container">
-        <h4 class="second__content light text__shadow">Teamwork really is everything. Based in South Florida, our team works day in and day out to attain more clients and please our current ones. We view every project as an opportunity to gain experience and credibility. Founded in 2021, our young age allows us to have a more personal connection with our clients. With most of our team members reigning from the greater Fort Lauderdale area, we have a great understanding of your competition. We take the necessary steps to make your website stand out. Every. Single. Time.</h4>
+        <h4 class="second__content light text__shadow">Teamwork really is everything. Based in South Florida, our team works tirelessly to grant you a dominant online presence. We view every project as an opportunity to gain experience and credibility, that's why we will almost never turn a project down. Founded in 2022, our growth has been tremendous, the main goal is to get as much credibility as possible. We take the necessary steps to make your website stand out. Every. Single. Time.</h4>
         </div>
     </section>
 
@@ -79,18 +79,18 @@
 
             <div class="info__fact shadow"data-aos="fade-up">
                 <div class="fact__heading">
-                    <h2 class = "info__num">2+</h2>
+                    <h2 class = "info__num">1</h2>
                 </div>
                 <div class="fact__subheading">
-                    <h5>Years in Service</h5>
+                    <h5>Year in Service</h5>
                 </div>
             </div>
             <div class="info__fact shadow"data-aos="fade-up">
                 <div class="fact__heading">
-                    <h2 class = "info__num">10+</h2>
+                    <h2 class = "info__num">3+</h2>
                 </div>
                 <div class="fact__subheading">
-                    <h5>Happy Customers</h5>
+                    <h5>Happy Clients</h5>
                 </div>
             </div>
             <div class="info__fact shadow"data-aos="fade-up">
@@ -115,45 +115,15 @@
 
     </section>
 
-    <!-- <div class="about__fifth">
-
-        <h3 class="intro text-shadow container">Trusted by Leading Companies</h3>
-
-        <div class="about__fifth__grid container shadow">
-
-                <img src="volume.svg" alt="">
-
-
-                <img src="volume.svg" alt="">
-
-
-                <img src="volume.svg" alt="">
-
-
-                <img src="volume.svg" alt="">
-
-
-
-
-        </div>
-
-
-
-    </div> -->
-
     <section class="about__statements">
 
         <div class="statement" data-aos="fade-up">
             <h2 class="intro text-shadow container">Our <span class="gradient">Mission</span></h2>
-            <h4 class = "statement__content text-shadow container">Facere modi et et. Quo soluta ab nihil ipsum deserunt labore eum. Dolorum qui aliquam amet. Ullam velit consequatur modi illo. Architecto sit architecto ut facere. Fugit exercitationem sunt quae voluptatem dolorem reiciendis.
-                Hic est ratione in voluptatum molestias qui minus consectetur inventore. Et at accusamus itaque nobis in cumque minima cupiditate nobis. Asperiores eum atque dolor dolor. Maxime esse voluptatem veniam dolorem.
-                Pariatur aut dolores et praesentium eius. Delectus est laborum rerum voluptatem consequatur blanditiis dignissimos. Et placeat et. Et iste et enim nesciunt. Molestiae sunt et beatae. Corporis eligendi consequuntur.</h4>
+            <h4 class = "statement__content text-shadow container">Providing the most value to our clients as possible is the backbone of our business model, that's why our websites have helped many businesses become more successful and profitable. We realized that when you focus not only on website design, but focus on engaging users and getting them to interact as intended, you enter a totally different league of website creation. Our plan for the near future is to surpass 50 clients, maintaining a relationship with each and every one. We're in it for the long haul, and want that to be obvious in every project.</h4>
         </div>
         <div class="statement" data-aos="fade-up">
             <h2 class="intro text-shadow container">Our <span class="gradient">Approach</span></h2>
-            <h4 class = "statement__content text-shadow container">Facere modi et et. Quo soluta ab nihil ipsum deserunt labore eum. Dolorum qui aliquam amet. Ullam velit consequatur modi illo. Architecto sit architecto ut facere. Fugit exercitationem sunt quae voluptatem dolorem reiciendis.
-                Hic est ratione in voluptatum molestias qui minus consectetur inventore. Et at accusamus itaque nobis in cumque minima cupiditate nobis. Asperiores eum atque dolor dolor. Maxime esse voluptatem veniam dolorem.
-                Pariatur aut dolores et praesentium eius. Delectus est laborum rerum voluptatem consequatur blanditiis dignissimos. Et placeat et. Et iste et enim nesciunt. Molestiae sunt et beatae. Corporis eligendi consequuntur.</h4>
+            <h4 class = "statement__content text-shadow container">We want every website to serve a purpose. In order to accomplish such a task we always think of the user first. The development is easy, the most important step of our process is our UX research. We analyze your business and engineer a UI that accomplishes your goals. A good UX & UI strategy is nothing without a solid development foundation, we have the best of both worlds. Once a client, always a client. The second your website is hosted, a <a class = "under gradient" href="comingsoon.html">Six Figure Labs account</a> is created for you on our site. Your account is the hub for everything involving your website. From maintenance requests to updated source code, it's all there.</h4>
         </div>
 
 
@@ -171,7 +141,7 @@
                 <p class = "light">BS, Computer Science</p>
             </div>
             <div class="founder__img">
-                <img src="FounderPic.jpg" alt="">
+                <img src="/images/FounderPic.jpg" alt="">
 
             </div>
             <div class="founder__paragraph light">
@@ -189,7 +159,7 @@
                 <p class = "light">BS, Computer Science</p>
             </div>
             <div class="founder__img">
-                <img src="TylerFounder.jpg" alt="">
+                <img src="/images/TylerFounder.jpg" alt="">
 
             </div>
             <div class="founder__paragraph light">
@@ -239,7 +209,7 @@
 
                 <div class="footer__1">
                     <a href="index.html" class="footer__logo">
-                        <img src="LogoWhite.svg" alt="">
+                        <img src="/images/LogoWhite.svg" alt="">
                     </a>
                     <h4 id="phrase">Propel your business to new heights
                         with <span class="gradient">6 Figure Labs!</span></h4>
@@ -273,9 +243,9 @@
                 </div>
 
                 <div class="socials">
-                    <a href="#"> <img src="instagram.svg" alt=""></a>
-                    <a href="#"><img src="twitter.svg" alt=""> </a>
-                    <a href="#"><img src="facebook.svg" alt=""></a>
+                    <a href="./comingsoon.html"> <img src="/images/instagram.svg" alt=""></a>
+                    <a href="https://twitter.com/sixfigurelabs"><img src="/images/twitter.svg" alt=""> </a>
+                    <a href="./comingsoon.html"><img src="/images/facebook.svg" alt=""></a>
                 </div>
 
 
