--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Six Figure Labs: Web Development & Web Design" />
     <meta property="og:description" content="Gain more business traction with a little help from Six Figure Labs"/>
     <meta property="og:image" content="openGraphBg.png" />
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/png" href="SixFavicon.png" />
-    <script src="main.js" defer></script>
-    <script src="nav.js" defer></script>
-    <script src="call-form.js" defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="shortcut icon" type="image/png" href="/images/SixFavicon.png" />
+    <script src="/js/main.js" defer></script>
+    <script src="/js/nav.js" defer></script>
+    <script src="/js/call-form.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
   rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -27,22 +27,22 @@
         <div class="group">
         <div class="nav desktop-nav container">
             <div class="nav__left">
-                <a href = "index.html" class="nav__logo">
-                    <img id = "logo" src="6FLMainLogo.svg" alt="">
+                <a href = "/index.html" class="nav__logo">
+                    <img id = "logo" src="/images/6FLMainLogo.svg" alt="">
                 </a>
                 <ul class="nav__items">
-                    <li><a id="home" class = "magic-hover" href="./index.html">Home</a></li>
-                    <li><a id="services" class = "magic-hover" href="./services.html">Services</a></li>
-                    <li><a id="about" class = "magic-hover" href="./about.html">About</a></li>
-                    <li><a id="our-work" class = "magic-hover" href="./our-work.html">Our Work</a></li>
+                    <li><a id="home" class = "magic-hover" href="/index.html">Home</a></li>
+                    <li><a id="services" class = "magic-hover" href="/services.html">Services</a></li>
+                    <li><a id="about" class = "magic-hover" href="/about.html">About</a></li>
+                    <li><a id="our-work" class = "magic-hover" href="./comingsoon.html">Our Work</a></li>
                 </ul>
             </div>
             <div class="nav__right">
-                <a href="./contact.html" class="btn-outline text-shadow magic-hover magic-hover__square" id="contact-button">
+                <a href="/contact.html" class="btn-outline text-shadow magic-hover magic-hover__square" id="contact-button">
                     <div class="btn__text">
-                        <h5 href="./contact.html">Contact</h5>
+                        <h5 href="/contact.html">Contact</h5>
                     </div>
-                    <img class="btn__icon" src="chevronDouble.svg" alt="">
+                    <img class="btn__icon" src="/images/chevronDouble.svg" alt="">
                 </a>
 
                 <button class="hamburger">
@@ -54,19 +54,19 @@
         </div>
         <div class="nav mobile-nav">
 
-            <a id="home" href="./index.html">Home</a>
-            <a id="services" href="./services.html">Services</a>
-            <a id="about" href="./about.html">About</a>
-            <a id="our-work" href="./our-work.html">Our Work</a>
-            <a id="contact" href="./contact.html">Contact</a>
+            <a id="home" href="/index.html">Home</a>
+            <a id="services" href="/services.html">Services</a>
+            <a id="about" href="/about.html">About</a>
+            <a id="our-work" href="/our-work.html">Our Work</a>
+            <a id="contact" href="/contact.html">Contact</a>
 
         </div>
     </div>
     </section>
 
-    <img class = "circle" id = "yellow" src="YellowCircle.svg" alt="" data-aos="fade-down">
-    <img class = "circle" id = "red" src="RedCircle.svg" alt="" data-aos="fade-down">
-    <img class = "circle" id = "purple" src="PurpleCircle.svg" alt="" data-aos="fade-up-right">
+    <img class = "circle" id = "yellow" src="/images/YellowCircle.svg" alt="" data-aos="fade-down">
+    <img class = "circle" id = "red" src="/images/RedCircle.svg" alt="" data-aos="fade-down">
+    <img class = "circle" id = "purple" src="/images/PurpleCircle.svg" alt="" data-aos="fade-up-right">
 
     <section class="second" data-aos="fade-right">
 
@@ -75,14 +75,14 @@
             <p class="huge text-shadow">Welcome to the <br> next generation of <br> website <span
                     class="auto-type"></span>
             </p>
-            <h4 class="second__content light text-shadow">Through UX and marketing strategies, we engineer websites that drive sales and increase your online presence. Let us create the best you.</h4>
+            <h4 class="second__content light text-shadow">Through UX and UI principles, we engineer websites that drive sales and increase your online presence. Let us create the best you.</h4>
 
-            <a href="./about.html" class="btn-gradient hvr-grow shadow magic-hover magic-hover__square">
+            <a href="/about.html" class="btn-gradient hvr-grow shadow magic-hover magic-hover__square">
                 <div class="btn__text">
                     <h5 href="#">Learn</h5>
                 </div>
                 <h5>More</h5>
-                <img class="btn__icon" src="rightArrow.svg" alt="">
+                <img class="btn__icon" src="/images/rightArrow.svg" alt="">
             </a>
 
         </div>
@@ -104,7 +104,7 @@
                             consectetur?"</h5>
                     </div>
                     <div class="card__logo">
-                        <img src="volume.svg" alt="">
+                        <img src="/images/volume.svg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -118,7 +118,7 @@
                             consectetur?"</h5>
                     </div>
                     <div class="card__logo">
-                        <img src="volume.svg" alt="">
+                        <img src="/images/volume.svg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -132,7 +132,7 @@
                             consectetur?"</h5>
                     </div>
                     <div class="card__logo">
-                        <img src="volume.svg" alt="">
+                        <img src="/images/volume.svg" alt="">
                     </div>
                 </div>
 
@@ -206,12 +206,12 @@
                     </div>
 
                 </div>
-                <a href="./services.html" class="btn-gradient" id="learn-more">
+                <a href="/services.html" class="btn-gradient" id="learn-more">
                     <div class="btn__text">
                         <h5 href="#">Learn</h5>
                     </div>
                     <h5> More </h5>
-                    <img class="btn__icon" src="rightArrow.svg" alt="">
+                    <img class="btn__icon" src="/images/rightArrow.svg" alt="">
                 </a>
             </div>
     </section>
@@ -226,7 +226,7 @@
                 <div class="accordion__item__header">
                     <h4>How long does a website take to create?</h4>
                     <div class="accordion__icon">
-                        <img src="chevron.svg" alt="">
+                        <img src="/images/chevron.svg" alt="">
                     </div>
                 </div>
                 <div class="accordion__item__body">
@@ -239,7 +239,7 @@
                 <div class="accordion__item__header">
                     <h4>How will I add future content?</h4>
                     <div class="accordion__icon">
-                        <img src="chevron.svg" alt="">
+                        <img src="/images/chevron.svg" alt="">
                     </div>
                 </div>
                 <div class="accordion__item__body">
@@ -252,7 +252,7 @@
                 <div class="accordion__item__header">
                     <h4>Why use Six Figure Labs over a no code solution</h4>
                     <div class="accordion__icon">
-                        <img src="chevron.svg" alt="">
+                        <img src="/images/chevron.svg" alt="">
                     </div>
                 </div>
                 <div class="accordion__item__body">
@@ -265,7 +265,7 @@
                 <div class="accordion__item__header">
                     <h4>How will a custom design benefit me?</h4>
                     <div class="accordion__icon">
-                        <img src="chevron.svg" alt="">
+                        <img src="/images/chevron.svg" alt="">
                     </div>
                 </div>
                 <div class="accordion__item__body">
@@ -278,7 +278,7 @@
                 <div class="accordion__item__header">
                     <h4>How much does a website cost?</h4>
                     <div class="accordion__icon">
-                        <img src="chevron.svg" alt="">
+                        <img src="/images/chevron.svg" alt="">
                     </div>
                 </div>
                 <div class="accordion__item__body">
@@ -291,7 +291,7 @@
                 <div class="accordion__item__header">
                     <h4>Do I need to provide all the content?</h4>
                     <div class="accordion__icon">
-                        <img src="chevron.svg" alt="">
+                        <img src="/images/chevron.svg" alt="">
                     </div>
                 </div>
                 <div class="accordion__item__body">
@@ -338,8 +338,8 @@
             <div class="footer__left">
 
                 <div class="footer__1">
-                    <a href="index.html" class="footer__logo">
-                        <img src="LogoWhite.svg" alt="">
+                    <a href="/index.html" class="footer__logo">
+                        <img src="/images/LogoWhite.svg" alt="">
                     </a>
                     <h4 id="phrase">Propel your business to new heights
                         with <span class="gradient">6 Figure Labs!</span></h4>
@@ -356,26 +356,26 @@
                     <div class="sitemap">
                         <h4>Overview</h4>
                         <ul class="permalinks">
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./about.html">About</a></li>
-                            <li><a href="./our-work.html">Our Work</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="/index.html">Home</a></li>
+                            <li><a href="/services.html">Services</a></li>
+                            <li><a href="/about.html">About</a></li>
+                            <li><a href="/our-work.html">Our Work</a></li>
+                            <li><a href="/contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="legal">
                         <h4>Legal</h4>
                         <ul class="privacy">
-                            <li><a href="index.html">Privacy Policy</a></li>
-                            <li><a href="about.html">Terms & Conditions</a></li>
+                            <li><a href="/index.html">Privacy Policy</a></li>
+                            <li><a href="/about.html">Terms & Conditions</a></li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="socials">
-                    <a href="#"> <img src="instagram.svg" alt=""></a>
-                    <a href="#"><img src="twitter.svg" alt=""> </a>
-                    <a href="#"><img src="facebook.svg" alt=""></a>
+                    <a href="./comingsoon.html"> <img src="/images/instagram.svg" alt=""></a>
+                    <a href="https://twitter.com/sixfigurelabs"><img src="/images/twitter.svg" alt=""> </a>
+                    <a href="./comingsoon.html"><img src="/images/facebook.svg" alt=""></a>
                 </div>
 
 
