--- a/services.html
+++ b/services.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Six Figure Labs: Web Development & Web Design" />
     <meta property="og:description" content="Gain more business traction with a little help from Six Figure Labs"/>
     <meta property="og:image" content="openGraphBg.png" />
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="services.css">
-    <link rel="shortcut icon" type="image/png" href="SixFavicon.png" />
-    <script src="nav.js" defer></script>
-    <script src="call-form.js" defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/services.css">
+    <link rel="shortcut icon" type="image/png" href="/images/SixFavicon.png" />
+    <script src="/js/nav.js" defer></script>
+    <script src="/js/call-form.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
   rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -28,21 +28,21 @@
         <div class="nav container">
             <div class="nav__left">
                 <a href = "index.html" class="nav__logo">
-                    <img id = "logo" src="6FLMainLogo.svg" alt="">
+                    <img id = "logo" src="/images/6FLMainLogo.svg" alt="">
                 </a>
                 <ul class="nav__items">
-                    <li><a id="home" href="./index.html">Home</a></li>
-                    <li><a id="services" href="./services.html">Services</a></li>
-                    <li><a id="about" href="./about.html">About</a></li>
-                    <li><a id="our-work" href="./our-work.html">Our Work</a></li>
+                    <li><a id="home" href="/index.html">Home</a></li>
+                    <li><a id="services" href="/services.html">Services</a></li>
+                    <li><a id="about" href="/about.html">About</a></li>
+                    <li><a id="our-work" href="./comingsoon.html">Our Work</a></li>
                 </ul>
             </div>
             <div class="nav__right">
-                <a href="./contact.html" class="btn-outline text-shadow" id="contact-button">
+                <a href="/contact.html" class="btn-outline text-shadow" id="contact-button">
                     <div class="btn__text">
                         <h5 href="./contact.html">Contact</h5>
                     </div>
-                    <img class="btn__icon" src="chevronDouble.svg" alt="">
+                    <img class="btn__icon" src="/images/chevronDouble.svg" alt="">
                 </a>
 
                 <button class="hamburger">
@@ -54,11 +54,11 @@
         </div>
         <div class="nav mobile-nav">
 
-            <a id="home mobile" href="./index.html">Home</a>
-            <a id="services" href="./services.html">Services</a>
-            <a id="about" href="./about.html">About</a>
-            <a id="our-work" href="./our-work.html">Our Work</a>
-            <a id="contact" href="./contact.html">Contact</a>
+            <a id="home mobile" href="/index.html">Home</a>
+            <a id="services" href="/services.html">Services</a>
+            <a id="about" href="/about.html">About</a>
+            <a id="our-work" href="/our-work.html">Our Work</a>
+            <a id="contact" href="/contact.html">Contact</a>
 
         </div>
     </div>
@@ -77,7 +77,7 @@
             <div class="services__list container">
                 <div class="service" data-aos="fade-up">
                     <div class="service__icon">
-                        <img src="bucket.png" alt="">
+                        <img src="/images/bucket.png" alt="">
                     </div>
                     <div class="service__heading">
                         <h4 class="gradient">Branding</h4>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="service" data-aos="fade-right">
                     <div class="service__icon">
-                        <img src="picture.png" alt="">
+                        <img src="/images/picture.png" alt="">
                     </div>
                     <div class="service__heading">
                         <h4 class="gradient">Web Design</h4>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="service" data-aos="fade-up">
                     <div class="service__icon">
-                        <img src="rocket.png" alt="">
+                        <img src="/images/rocket.png" alt="">
                     </div>
                     <div class="service__heading">
                         <h4 class="gradient">Web Development</h4>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="service" data-aos="fade-down">
                     <div class="service__icon">
-                        <img src="magnify.png" alt="">
+                        <img src="/images/magnify.png" alt="">
                     </div>
                     <div class="service__heading">
                         <h4 class="gradient">UX Implementation</h4>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="service" data-aos="fade-right">
                     <div class="service__icon">
-                        <img src="gear.png" alt="">
+                        <img src="/images/gear.png" alt="">
                     </div>
                     <div class="service__heading">
                         <h4 class="gradient">SEO</h4>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="service" data-aos="fade-down">
                     <div class="service__icon">
-                        <img src="chart.png" alt="">
+                        <img src="/images/chart.png" alt="">
                     </div>
                     <div class="service__heading">
                         <h4 class="gradient">Backend Development</h4>
@@ -165,7 +165,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="temp.svg" alt="">
+        <img src="/images/temp.svg" alt="">
     </div>
     </div> 
          <div class="services__fourth__service" data-aos="fade-up">  
@@ -179,7 +179,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="temp.svg" alt="">
+        <img src="/images/temp.svg" alt="">
     </div>
     </div> 
          <div class="services__fourth__service" data-aos="fade-up">  
@@ -193,7 +193,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="temp.svg" alt="">
+        <img src="/images/temp.svg" alt="">
     </div>
     </div> 
          <div class="services__fourth__service" data-aos="fade-up">  
@@ -207,7 +207,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="temp.svg" alt="">
+        <img src="/images/temp.svg" alt="">
     </div>
     </div> 
          <div class="services__fourth__service" data-aos="fade-up">  
@@ -221,7 +221,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="temp.svg" alt="">
+        <img src="/images/temp.svg" alt="">
     </div>
     </div> 
          <div class="services__fourth__service" data-aos="fade-up">  
@@ -235,7 +235,7 @@
         Temporibus culpa, aliquam voluptatum dicta illo quam modi harum quaerat! Temporibus facilis magni libero recusandae, non atque asperiores repellendus dignissimos! Error voluptatem magni ratione, repellat ad dolorem! Numquam, perferendis provident.</h5>
     </div>
     <div class="services__fourth__service-img">
-        <img src="temp.svg" alt="">
+        <img src="/images/temp.svg" alt="">
     </div>
     </div> 
 
@@ -278,8 +278,8 @@
             <div class="footer__left">
 
                 <div class="footer__1">
-                    <a href="index.html" class="footer__logo">
-                        <img src="LogoWhite.svg" alt="">
+                    <a href="/index.html" class="footer__logo">
+                        <img src="/images/LogoWhite.svg" alt="">
                     </a>
                     <h4 id="phrase">Propel your business to new heights
                         with <span class="gradient">6 Figure Labs!</span></h4>
@@ -296,26 +296,26 @@
                     <div class="sitemap">
                         <h4>Overview</h4>
                         <ul class="permalinks">
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./about.html">About</a></li>
-                            <li><a href="./our-work.html">Our Work</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="/index.html">Home</a></li>
+                            <li><a href="/services.html">Services</a></li>
+                            <li><a href="/about.html">About</a></li>
+                            <li><a href="/our-work.html">Our Work</a></li>
+                            <li><a href="/contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="legal">
                         <h4>Legal</h4>
                         <ul class="privacy">
-                            <li><a href="index.html">Privacy Policy</a></li>
-                            <li><a href="about.html">Terms & Conditions</a></li>
+                            <li><a href="/index.html">Privacy Policy</a></li>
+                            <li><a href="/about.html">Terms & Conditions</a></li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="socials">
-                    <a href="#"> <img src="instagram.svg" alt=""></a>
-                    <a href="#"><img src="twitter.svg" alt=""> </a>
-                    <a href="#"><img src="facebook.svg" alt=""></a>
+                    <a href="./comingsoon.html"> <img src="/images/instagram.svg" alt=""></a>
+                    <a href="https://twitter.com/sixfigurelabs"><img src="/images/twitter.svg" alt=""> </a>
+                    <a href="./comingsoon.html"><img src="/images/facebook.svg" alt=""></a>
                 </div>
 
 
