--- a/our-work.html
+++ b/our-work.html
@@ -10,13 +10,13 @@
     <meta property="og:title" content="Six Figure Labs: Web Development & Web Design" />
     <meta property="og:description" content="Gain more business traction with a little help from Six Figure Labs"/>
     <meta property="og:image" content="openGraphBg.png" />
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="services.css">
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="our-work.css">
-    <link rel="shortcut icon" type="image/png" href="SixFavicon.png" />
-    <script src="nav.js" defer></script>
-    <script src="call-form.js" defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/services.css">
+    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="/css/our-work.css">
+    <link rel="shortcut icon" type="image/png" href="/images/SixFavicon.png" />
+    <script src="/js/nav.js" defer></script>
+    <script src="/js/call-form.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
   rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -29,22 +29,22 @@
         <div class="group">
         <div class="nav container">
             <div class="nav__left">
-                <a href = "index.html" class="nav__logo">
-                    <img id = "logo" src="6FLMainLogo.svg" alt="">
+                <a href = "/index.html" class="nav__logo">
+                    <img id = "logo" src="/images/6FLMainLogo.svg" alt="">
                 </a>
                 <ul class="nav__items">
-                    <li><a id="home" href="./index.html">Home</a></li>
-                    <li><a id="services" href="./services.html">Services</a></li>
-                    <li><a id="about" href="./about.html">About</a></li>
-                    <li><a id="our-work" href="./our-work.html">Our Work</a></li>
+                    <li><a id="home" href="/index.html">Home</a></li>
+                    <li><a id="services" href="/services.html">Services</a></li>
+                    <li><a id="about" href="/about.html">About</a></li>
+                    <li><a id="our-work" href="./comingsoon.html">Our Work</a></li>
                 </ul>
             </div>
             <div class="nav__right">
-                <a href="./contact.html" class="btn-outline text-shadow" id="contact-button">
+                <a href="/contact.html" class="btn-outline text-shadow" id="contact-button">
                     <div class="btn__text">
-                        <h5 href="./contact.html">Contact</h5>
+                        <h5 href="/contact.html">Contact</h5>
                     </div>
-                    <img class="btn__icon" src="chevronDouble.svg" alt="">
+                    <img class="btn__icon" src="/images/chevronDouble.svg" alt="">
                 </a>
 
                 <button class="hamburger">
@@ -56,11 +56,11 @@
         </div>
         <div class="nav mobile-nav">
 
-            <a id="home mobile" href="./index.html">Home</a>
-            <a id="services mobile" href="./services.html">Services</a>
-            <a id="about mobile" href="./about.html">About</a>
-            <a id="our-work" href="./our-work.html">Our Work</a>
-            <a id="contact" href="./contact.html">Contact</a>
+            <a id="home mobile" href="/index.html">Home</a>
+            <a id="services mobile" href="/services.html">Services</a>
+            <a id="about mobile" href="/about.html">About</a>
+            <a id="our-work" href="/our-work.html">Our Work</a>
+            <a id="contact" href="/contact.html">Contact</a>
 
         </div>
     </div>
@@ -79,7 +79,7 @@
 <a href = "https://www.netcapfranchiseconsultants.com" class="text-shadow">Netcap Franchise Consultants</a>
 </div>
 <div class="client__img">
-<img src="SamplePortfolioPic.png" alt="">
+<img src="/images/SamplePortfolioPic.png" alt="">
 </div>
 <div class="client__content">
     <h4>Facere modi et et. Quo soluta ab nihil ipsum deserunt labore eum. Dolorum qui aliquam amet. Ullam velit consequatur modi illo. Architecto sit architecto ut facere. Fugit exercitationem sunt quae voluptatem dolorem reiciendis.
@@ -92,7 +92,7 @@
 <a href = "https://www.netcapfranchiseconsultants.com" class="text-shadow">Google</a>
 </div>
 <div class="client__img">
-<img src="SamplePortfolioPic.png" alt="">
+<img src="/images/SamplePortfolioPic.png" alt="">
 </div>
 <div class="client__content">
     <h4>Facere modi et et. Quo soluta ab nihil ipsum deserunt labore eum. Dolorum qui aliquam amet. Ullam velit consequatur modi illo. Architecto sit architecto ut facere. Fugit exercitationem sunt quae voluptatem dolorem reiciendis.
@@ -105,7 +105,7 @@
 <a href = "https://www.netcapfranchiseconsultants.com" class="text-shadow">Facebook</a>
 </div>
 <div class="client__img">
-<img src="SamplePortfolioPic.png" alt="">
+<img src="/images/SamplePortfolioPic.png" alt="">
 </div>
 <div class="client__content">
     <h4>Facere modi et et. Quo soluta ab nihil ipsum deserunt labore eum. Dolorum qui aliquam amet. Ullam velit consequatur modi illo. Architecto sit architecto ut facere. Fugit exercitationem sunt quae voluptatem dolorem reiciendis.
@@ -154,8 +154,8 @@
         <div class="footer__left">
 
             <div class="footer__1">
-                <a href="index.html" class="footer__logo">
-                    <img src="LogoWhite.svg" alt="">
+                <a href="/index.html" class="footer__logo">
+                    <img src="/images/LogoWhite.svg" alt="">
                 </a>
                 <h4 id="phrase">Propel your business to new heights
                     with <span class="gradient">6 Figure Labs!</span></h4>
@@ -172,26 +172,26 @@
                 <div class="sitemap">
                     <h4>Overview</h4>
                     <ul class="permalinks">
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./services.html">Services</a></li>
-                        <li><a href="./about.html">About</a></li>
-                        <li><a href="./our-work.html">Our Work</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/services.html">Services</a></li>
+                        <li><a href="/about.html">About</a></li>
+                        <li><a href="/our-work.html">Our Work</a></li>
+                        <li><a href="/contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="legal">
                     <h4>Legal</h4>
                     <ul class="privacy">
-                        <li><a href="index.html">Privacy Policy</a></li>
-                        <li><a href="about.html">Terms & Conditions</a></li>
+                        <li><a href="/index.html">Privacy Policy</a></li>
+                        <li><a href="/about.html">Terms & Conditions</a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="socials">
-                <a href="#"> <img src="instagram.svg" alt=""></a>
-                <a href="#"><img src="twitter.svg" alt=""> </a>
-                <a href="#"><img src="facebook.svg" alt=""></a>
+                <a href="./comingsoon.html"> <img src="/images/instagram.svg" alt=""></a>
+                <a href="https://twitter.com/sixfigurelabs"><img src="/images/twitter.svg" alt=""> </a>
+                <a href="./comingsoon.html"><img src="/images/facebook.svg" alt=""></a>
             </div>
 
 
