content & file structure2

--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
 
         <div class="statement" data-aos="fade-up">
             <h2 class="intro text-shadow container">Our <span class="gradient">Mission</span></h2>
-            <h4 class = "statement__content text-shadow container">Providing the most value to our clients as possible is the backbone of our business model, that's why our websites have helped many businesses become more successful and profitable. We realized that when you focus not only on website design, but focus on engaging users and getting them to interact as intended, you enter a totally different league of website creation. Our plan for the near future is to surpass 50 clients, maintaining a relationship with each and every one. We're in it for the long haul, and want that to be obvious in every project.</h4>
+            <h4 class = "statement__content text-shadow container">Providing the most value to our clients as possible is the backbone of our business model, that's why our websites have helped many businesses become more successful and profitable. We realized that when you focus not only on website design, but on engaging users and getting them to interact as intended, you enter a totally different league of website creation. Our plan for the near future is to surpass 50 clients, maintaining a relationship with each and every one. We're in it for the long haul, and want that to be obvious in every project.</h4>
         </div>
         <div class="statement" data-aos="fade-up">
             <h2 class="intro text-shadow container">Our <span class="gradient">Approach</span></h2>
